--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <form action="" class="addTask">
       <button class="addTaskBTN"></button>
 
-      <input type="text" maxlength="22" value="Create a new todo...">
+      <input type="text" maxlength="22" placeholder="Create new task">
     </form>
     <div class="allTasks">
       <ul class="listOfTasks">
