--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       </div>
     </div>
     <form action="" class="addTask">
-      <button class="addTaskBTN"></button>
+      <div class="buttonWrap"><button class="addTaskBTN"></button></div>
+
 
       <input type="text" maxlength="22" placeholder="Create new task">
     </form>
